# diffusion-benchmarking

./: .gitignore  .gitmodules  1003dsingle  100d3double  300d3double  300d3dsingle-per  CMakeLists.txt  README.md  instructions.txt  tmp_x  tmp_y  x  x.cpp  x.py  x1  x2  x_tmp  y  y1  y2  y_tmp  z
.devcontainer/: configure.sh  devcontainer.json  install_rvv_crosscompiler.sh  rave-env
benchmarking/: benchmark.py  benchmarking-pb.json  benchmarking.json  compute_cores_division.py
data/: plot.R
envs/: MN5.sh
example-problems/: 100x100x1.json  100x100x100x1.json  100x100x100x16.json  100x100x100x8.json  100x100x8.json  200x200x200x8.json  300x300x300x100.json  50x50x50x1.json  50x50x50x8.json  80x80x80x16.json  TODO.txt  average.json  counters.json  params.json  params2.json  toy-big.json  toy-small2.json  toy-small3.json  toy.json
experiments/: fully_implicit.py  stencil.py  thomas.py  x.py
mpi/: CMakeLists.txt
plots/: plot.py
scripts/: benchmark.sh  benchmark_mpi.sh  mpi_scalability.sh  obtain_counters.sh  papi_to_json.sh  profile.sh  run_MN5.sh  run_mn_gpp.sh  run_mn_hbm.sh  sdv-expermients.sh  test.sh  test_mpi.sh
src/: MPI_1D_blocking.cpp  MPI_1D_blocking.h  algorithms.cpp  algorithms.h  barrier.h  base_solver.h  biofvm.cpp  biofvm.h  biofvm_par.cpp  biofvm_par.h  blocked_thomas_solver.cpp  blocked_thomas_solver.h  blocked_thomas_solver_t.cpp  co_thomas_solver.cpp  co_thomas_solver.h  cubed_mix_thomas_solver_t.cpp  cubed_mix_thomas_solver_t.h  cubed_thomas_solver_t.cpp  cubed_thomas_solver_t.h  cyclic_reduction_solver.cpp  cyclic_reduction_solver.h  cyclic_reduction_solver_t.cpp  diffusion_solver.h  full_lapack_solver.cpp  full_lapack_solver.h  general_lapack_thomas_solver.cpp  general_lapack_thomas_solver.h  lapack_thomas_solver.cpp  lapack_thomas_solver.h  least_compute_thomas_solver.cpp  least_compute_thomas_solver.h  least_compute_thomas_solver_m.cpp  least_compute_thomas_solver_m.h  least_compute_thomas_solver_s.cpp  least_compute_thomas_solver_s.h  least_compute_thomas_solver_s_t.cpp  least_compute_thomas_solver_s_t.cpp.txt  least_compute_thomas_solver_s_t.h  least_compute_thomas_solver_s_t_transpose.cpp  least_compute_thomas_solver_s_t_transpose.h  (+37 more)
src/mpi/: CMakeLists.txt  MPI_1D_blocking.cpp  MPI_1D_blocking.h  MPI_1D_tasks.cpp  MPI_1D_tasks.h  MPI_helper.h  algorithms.cpp.txt  algorithms.h.txt  main.cpp
src/space-dependent-diffusion/: full_blocking.cpp  full_blocking.h  least_compute_thomas_solver_t.cpp  least_compute_thomas_solver_t.h  least_memory_thomas_solver_t.cpp  least_memory_thomas_solver_t.h  partial_blocking.cpp  partial_blocking.h  reference_thomas_solver.cpp  reference_thomas_solver.h
